# poneglyphDB

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SETUP.md  codecov.yml
.cargo/: config.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docs.yml  release.yml
.husky/: pre-commit  pre-push
benches/: circuit_building.rs  proof_generation.rs  verification.rs  witness_computation.rs
docs/: BRANCH_PROTECTION.md  api.md  architecture.md  custom_gates.md  deployment.md  development.md
examples/: basic_query.rs  client_usage.rs  complex_query.rs  recursive_proof.rs
poneglyphdb-cli/: Cargo.toml
poneglyphdb-cli/src/: main.rs
poneglyphdb-client/: Cargo.toml
poneglyphdb-client/src/: client.rs  lib.rs  query_builder.rs  verifier.rs
poneglyphdb-core/: Cargo.toml
poneglyphdb-core/src/: error.rs  lib.rs
poneglyphdb-core/src/circuit/: builder.rs  composer.rs  mod.rs  optimizer.rs  types.rs
poneglyphdb-core/src/circuit/gates/: arithmetic.rs  array.rs  comparison.rs  logical.rs  mod.rs  special.rs  string.rs  trait_.rs
poneglyphdb-core/src/circuit/lookup/: boolean.rs  comparison.rs  mod.rs  range_check.rs  table.rs
poneglyphdb-core/src/circuit/operations/: aggregation.rs  group_by.rs  join.rs  limit.rs  mod.rs  order_by.rs  projection.rs  selection.rs  subquery.rs  window.rs
poneglyphdb-core/src/database/: connection.rs  executor.rs  index.rs  mod.rs  schema.rs  types.rs
poneglyphdb-core/src/query/: executor.rs  mod.rs  optimizer.rs  parser.rs  types.rs
poneglyphdb-core/src/witness/: computer.rs  extractor.rs  mod.rs  optimizer.rs  types.rs
poneglyphdb-core/src/zkp/: batch.rs  commitment.rs  mod.rs  parallel.rs  polynomial.rs  prover.rs  public_private.rs  recursive.rs  setup.rs  srs.rs  verifier.rs
poneglyphdb-core/src/zkp/arguments/: lookup.rs  mod.rs  permutation.rs
poneglyphdb-host/: Cargo.toml
poneglyphdb-host/src/: handler.rs  main.rs  manager.rs  server.rs
scripts/: benchmark.sh  generate_tpch.sh  setup_db.sh  trusted_setup.sh
tests/common/: mod.rs
tests/integration/: mod.rs
tests/tpch/: mod.rs
