[package]
name = "poneglyphdb-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation = "https://docs.rs/poneglyphdb-client"
homepage = "https://github.com/yourusername/poneglyphdb"
keywords = ["zkp", "zero-knowledge", "sql", "client", "verification"]
categories = ["cryptography", "database", "web-programming"]

[dependencies]
poneglyphdb-core = { path = "../poneglyphdb-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = []
full = []
