[package]
name = "poneglyphdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
documentation = "https://docs.rs/poneglyphdb-core"
homepage = "https://github.com/yourusername/poneglyphdb"
keywords = ["zkp", "zero-knowledge", "sql", "database", "proof", "verification"]
categories = ["cryptography", "database", "algorithms"]

[dependencies]
halo2 = { workspace = true }
# TODO: Add halo2_gadgets when Poseidon API is fully integrated
# halo2_gadgets = { version = "0.3.1" }
ff = { workspace = true }
sqlx = { workspace = true }
sqlparser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = []
# Enable all optimizations
full = []
# Enable experimental features
experimental = []

[lib]
# Documentation configuration
doctest = true
