[package]
name = "poneglyphdb-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "poneglyphdb-host"
path = "src/main.rs"

[dependencies]
poneglyphdb-core = { path = "../poneglyphdb-core" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

